--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
   },
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.1.0",
     "react": "^16.5.2",
+    "react-bootstrap": "^1.0.0-beta.1",
     "react-dom": "^16.5.2"
   }
 }
