--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "module": "es6",
       "target": "es5",
       "jsx": "react",
-      "sourceMap": true
+      "sourceMap": true,
+      "moduleResolution": "node"
     }
 }
