--- a/package.json
+++ b/package.json
@@ -1,50 +1,54 @@
 {
-  "name": "webpack-playground",
-  "sideEffects": false,
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js",
-    "build:dev": "webpack --config webpack.dev.js",
-    "build:prod": "webpack --config webpack.prod.js",
-    "test": "karma start"
-  },
-  "author": "manas.bajaj",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/enzyme": "^3.1.14",
-    "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/jasmine": "^2.8.8",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.7",
-    "@types/webpack": "^4.4.12",
-    "@types/webpack-env": "^1.13.6",
-    "clean-webpack-plugin": "^0.1.19",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jasmine-core": "^3.2.1",
-    "karma": "^3.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.3.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.5",
-    "ts-loader": "^5.1.1",
-    "typescript": "^3.0.3",
-    "webpack": "^4.19.1",
-    "webpack-bundle-analyzer": "^3.0.2",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
-  },
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^3.1.0",
-    "react": "^16.5.2",
-    "react-bootstrap": "^1.0.0-beta.1",
-    "react-dom": "^16.5.2"
-  }
+    "name": "webpack-playground",
+    "sideEffects": false,
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "webpack-dev-server --config webpack.dev.js",
+        "build:dev": "webpack --config webpack.dev.js",
+        "build:prod": "webpack --config webpack.prod.js",
+        "test": "jest"
+    },
+    "author": "manas.bajaj",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/enzyme": "^3.1.14",
+        "@types/enzyme-adapter-react-16": "^1.0.3",
+        "@types/react": "^16.4.14",
+        "@types/react-dom": "^16.0.7",
+        "@types/webpack": "^4.4.12",
+        "@types/webpack-env": "^1.13.6",
+        "clean-webpack-plugin": "^0.1.19",
+        "enzyme": "^3.6.0",
+        "enzyme-adapter-react-16": "^1.5.0",
+        "html-webpack-plugin": "^3.2.0",
+        "jest": "^23.6.0",
+        "ts-loader": "^5.1.1",
+        "typescript": "^3.0.3",
+        "webpack": "^4.19.1",
+        "webpack-bundle-analyzer": "^3.0.2",
+        "webpack-cli": "^3.1.0",
+        "webpack-dev-server": "^3.1.8",
+        "ts-jest": "^23.10.5",
+        "@types/jest": "^23.3.13"
+    },
+    "private": true,
+    "dependencies": {
+        "@material-ui/core": "^3.1.0",
+        "react": "^16.5.2",
+        "react-bootstrap": "^1.0.0-beta.1",
+        "react-dom": "^16.5.2"
+    },
+    "jest": {
+        "transform": {
+            ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+        },
+        "testRegex": "(/tests/.*|\\.(spec))\\.(ts|tsx|js)$",
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js"
+        ]
+    }
 }
