--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
       "target": "es5",
       "jsx": "react",
       "sourceMap": true,
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true
     }
 }
