--- a/package.json
+++ b/package.json
@@ -1,56 +1,34 @@
 {
-    "name": "webpack-playground",
-    "sideEffects": false,
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "webpack-dev-server --config webpack.dev.js",
-        "build:dev": "webpack --config webpack.dev.js",
-        "build:prod": "webpack --config webpack.prod.js",
-        "test": "jest"
-    },
-    "author": "manas.bajaj",
-    "license": "MIT",
-    "devDependencies": {
-        "@types/enzyme": "^3.1.14",
-        "@types/enzyme-adapter-react-16": "^1.0.3",
-        "@types/jest": "^23.3.13",
-        "@types/react": "^16.4.14",
-        "@types/react-dom": "^16.0.7",
-        "@types/webpack": "^4.4.12",
-        "@types/webpack-env": "^1.13.6",
-        "clean-webpack-plugin": "^0.1.19",
-        "enzyme": "^3.6.0",
-        "enzyme-adapter-react-16": "^1.5.0",
-        "html-webpack-plugin": "^3.2.0",
-        "jest": "^25.1.0",
-        "ts-jest": "^25.2.1",
-        "ts-loader": "^5.1.1",
-        "typescript": "^3.0.3",
-        "webpack": "^4.42.0",
-        "webpack-bundle-analyzer": "^3.6.1",
-        "webpack-cli": "^3.1.0",
-        "webpack-dev-server": "^3.10.3"
-    },
-    "private": true,
-    "dependencies": {
-        "@material-ui/core": "^3.1.0",
-        "css-loader": "^3.5.2",
-        "react": "^16.5.2",
-        "react-bootstrap": "^1.0.0-beta.1",
-        "react-dom": "^16.5.2",
-        "style-loader": "^1.1.4"
-    },
-    "jest": {
-        "transform": {
-            ".(ts|tsx)": "ts-jest"
-        },
-        "testRegex": "(/tests/.*|\\.(spec))\\.(ts|tsx|js)$",
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js"
-        ]
-    }
+  "name": "webpack-playground",
+  "version": "1.0.0",
+  "private": true,
+  "description": "",
+  "license": "MIT",
+  "author": "manas.bajaj",
+  "sideEffects": false,
+  "main": "index.js",
+  "scripts": {
+    "build:dev": "webpack --config webpack.dev.js",
+    "build:prod": "webpack --config webpack.prod.js",
+    "start": "webpack-dev-server --config webpack.dev.js",
+    "test": "jest"
+  },
+  "dependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "17.0.40",
+    "@types/react-dom": "17.0.13",
+    "@types/webpack": "5.28.0",
+    "@types/webpack-env": "1.16.3",
+    "acorn": "8.7.0",
+    "clean-webpack-plugin": "4.0.0",
+    "html-webpack-plugin": "5.5.0",
+    "ts-loader": "9.2.8",
+    "typescript": "4.6.2",
+    "webpack": "5.70.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.7.4"
+  }
 }
