--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@swc/core": "1.2.154",
     "@types/react": "17.0.40",
     "@types/react-dom": "17.0.13",
     "@types/webpack": "5.28.0",
     "@types/webpack-env": "1.16.3",
     "acorn": "8.7.0",
     "clean-webpack-plugin": "4.0.0",
+    "fork-ts-checker-webpack-plugin": "7.2.1",
     "html-webpack-plugin": "5.5.0",
+    "swc-loader": "0.1.15",
     "ts-loader": "9.2.8",
     "typescript": "4.6.2",
     "webpack": "5.70.0",
